testsuite/positive/Issue-1067.n
public class Base
{
  public RaiseEvent() : void { X(null, null) }

  public event X : System.EventHandler;
}

public class Generic[T] where T: Base
{
  value : T;

  public this(value : T)
  {
    this.value = value;
    this.value.X += fun (_ : System.Object, _ : System.EventArgs)
    {
      System.Console.WriteLine("OK");
    };
  }

  public RaiseEvent() : void
  {
    value.RaiseEvent();
  }
}

module Program
{
  Main() : void
  {
    def g = Generic(Base());
    g.RaiseEvent();
  }
}
/*
OK
*/