testsuite/negative/Issue-git-0288.n
using System;
using System.Console;

public class SqlValue
{
	public this(_systemType : Type, _value : object) { }

  public Value : object { get { "" } }
}

public module Program
{
  Main() : void
  {
   	def v1 = null : SqlValue;
		def v2 = null : SqlValue;
		_ = SqlValue(v1.Value.ToString() + v2.Value); // E: in argument #1, needed
  }
}